# agentscope

./: .gitignore  .pre-commit-config.yaml  APP_README.md  CHANGELOG.md  CI_FIXED.md  CONTRIBUTING.md  ENHANCEMENTS_APPLIED.md  GITHUB_PAGES_READY.md  GITHUB_SETUP_COMPLETE.md  INSTALLATION.md  LAUNCH_PLAN.md  PROJECT_SUMMARY.md  README.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentscope/: __init__.py
agentscope/adapters/: base.py  langchain_adapter.py
agentscope/core/: exceptions.py  metrics.py  pricing.py  scope.py
backend/: main.py  requirements.txt
docs/: app.html  index.html
examples/: basic_example.py
frontend/app/: globals.css  layout.tsx  page.tsx
tests/: conftest.py  test_metrics.py  test_pricing.py  test_scope.py
